[JAVA 9] : TU sur la calculatrice