@@ -1,5 +1,7 @@
 #!/bin/bash
 
 #Run Main
-java --module-path modules -m com.norsys/norsys.main.Main
+java --module-path lib:modules								\
+	--add-modules org.common.test 							\
+	-m junit/org.junit.runner.JUnitCore common.math.test.CalculatriceTest
 
